--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,20 @@
 .react-calendar__tile--active {
   background-color: #1087ff;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.spinner {
+  border-top: 5px solid #6c9976;
+  border-right: 5px solid #6c9976;
+  border-bottom: 5px solid #6c9976;
+  border-left: 5px solid #fff;
+  animation: spin 1s linear infinite;
+  border-radius: 50%;
+}
