--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 
 .react-calendar {
   width: 100%;
-  height: 100%;
   background-color: #fff;
   color: #222;
   border-radius: 8px;
@@ -47,4 +46,15 @@
   border-left: 5px solid #fff;
   animation: spin 1s linear infinite;
   border-radius: 50%;
+}
+
+.slick-arrow:before {
+  color: #6c9976;
+}
+.slick-slide li {
+  list-style: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
